# PRML-ROBOT

./: README.md  pyproject.toml  uv.toml
behavior_cloning/: .gitignore  README.md  pyproject.toml
behavior_cloning/MLP_only/: data_collector.py  eval_policy.py
behavior_cloning/MLP_only/generalization_eval/: README.md  __init__.py
behavior_cloning/MLP_only/generalization_eval/analysis/: plot_success_curves.py
behavior_cloning/MLP_only/generalization_eval/base/: eval_base_x.py  eval_base_y.py
behavior_cloning/MLP_only/generalization_eval/common/: __init__.py  logging_utils.py  policy_loader.py  rollout.py
behavior_cloning/MLP_only/generalization_eval/extra/disturbance/: eval_external_push.py
behavior_cloning/MLP_only/generalization_eval/extra/noise/: eval_action_noise_delay.py  eval_obs_delay_drop.py  eval_obs_noise.py
behavior_cloning/MLP_only/generalization_eval/extra/obstacles/: eval_obstacle_box.py
behavior_cloning/MLP_only/generalization_eval/extra/physics/: eval_friction.py  eval_restitution.py
behavior_cloning/tools/: inspect_dataset.py
behavior_cloning/visual/100.0%/: data_collector.py
behavior_cloning/visual/47.4%/: data_collector.py
behavior_cloning/visual/61.8%/: train_full_trajectory.py
behavior_cloning/visual/84.8%/: data_collector.py  eval_full_trajectory.py  train_full_trajectory.py
behavior_cloning/visual/84.8%/generalization_eval_vision/: README.md  run.py  run_all.py
behavior_cloning/visual/96.0%/: data_collector.py
behavior_cloning/visual/distribution_study/: eval_full_trajectory.py  run_study.py  train_full_trajectory.py
(+40 files in other folders)
