[project]
name = "robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "matplotlib>=3.5.0",
    "numpy",
    "opencv-python-headless",
    "pybullet",
    "tqdm",
    "einops",
    "h5py",
]